﻿Sigil v0.2.0 RC1 ADD_DATE
    - if an image is not set as a cover image manually, Sigil now uses heuristics on save
    to determine if the epub has a cover image
    - if an epub has an image set as a cover image, Sigil will now write a special meta tag
    that identifies this image in the OPF; this tag is then used by the iPad (and Calibre)
    for the book cover, for instance
    - all OPF <guide> element information when loading epubs is now preserved
    - added a new "Add Semantics" menu for XHTML documents; it can be used to mark XHTMLs as
    "Dedication", "Colophon", "Glossary" etc. for the <guide> element of the OPF
    - the status bar now shows a message after chapter split operations
    - fixed an issue with filenames with characters that should not appear in valid XML IDs
    having those characters added anyway (issue #344)
    - fixed an issue with files with uppercase extensions not having a mimetype set in the OPF
    (issue #349)
    - fixed an issue with Sigil rewriting headings when the TOC was opened and no heading was 
    edited (issue #327)
    - fixed an issue where adding an existing HTML file through the Book Browser would clear
    the current metadata in the book (issue #329)
    - added a check that prevents Sigil from loading the same resource multiple times in 
    invalid epubs (issue #339) 
    - fixed a bug that made the direct XHTML references in the NCX file less likely (issue #333)
    - fixed an issue with Sigil crashing when trying to save a loaded epub that had some badly
    formed metadata elements (issue #325)

Sigil v0.2.0 ß3 2010.03.23.
    - added two new WYSIWYG actions that work for both Views: "Insert SGF Chapter Marker" which
    inserts the old SGF horizontal rule chapter breaking marker and "Split On SGF Chapter Markers"
    which splits the current chapter according to the placement of these markers (issue #262)
    - chapter splitting now works in Code View